added javaclass for evaluation with benchexec.